--- a/gb/16/10/31/n8447671.md
+++ b/gb/16/10/31/n8447671.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/exms2785/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/exms2785/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/exms2785/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/exms2785/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/exms2785/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/exms2785/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/exms2785/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/exms2785/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/exms2785/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/exms2785/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/exms2785/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/exms2785/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/exms2785/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/exms2785/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/exms2785/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>鲁鸣：山东一些官员为何害怕真相展板？</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-149204153-320x200.jpg" />
+
 <h6></h6>
 <hr>
-	<p>【大纪元2016年11月01日讯】近几个月以来，山东省青岛市区及周边地区有众多<a class="\&quot;popup\&quot;" title="\&quot;法轮大法，也称法轮功，一九九二年五月由李洪志先生传出的佛家上乘修炼大法，以宇宙最高特性“真善忍”为根本指导，按照宇宙的演化原理而修炼。经亿万人的修炼实践证明，法轮大法是大法大道，在把真正修炼的人带到高层次的同时，对稳定社会、提高人们的身体素质和道德水准，也起到了不可估量的正面作用。" href="\&quot;http://www.minghui.org/mh/glossary.md#1#1\&quot;">法轮功</a>学员被绑架，仅青岛市市南区分局就在三个月内绑架了七位<ahref="https://github.com/exms2785/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员，当被绑架的法轮功学员家人问警察为什么绑架好人时，警察说是因为省里下的命令，“省里很重视<ahref="https://github.com/exms2785/djy/blob/master/gb/tag/%E7%9C%9F%E7%9B%B8%E5%B1%95%E6%9D%BF.md#1">真相展板</a>”。</p>
-<p>很“重视”什么意思？就是很害怕<ahref="https://github.com/exms2785/djy/blob/master/gb/tag/%E7%9C%9F%E7%9B%B8%E5%B1%95%E6%9D%BF.md#1">真相展板</a>。真相展板是什么？内容是揭露<ahref="https://github.com/exms2785/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>流氓犯罪集团的反人类罪行，以及国内二十多万人向中国的最高法院和最高检察院控告<a class="\&quot;popup\&quot;" title="\&quot;明慧网上所说的迫害，一般特指中共对法轮功的迫害。\&quot;" href="\&quot;http://www.minghui.org/mh/glossary.md#1#37\&quot;">迫害</a>元凶<ahref="https://github.com/exms2785/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>的事实。这是全世界人们都知道的事实，也是中国各级官员和大多数民众要知道的事实。那么，为什么某些人害怕真相展板？到底哪些人害怕世人看到真相展板、了解展板所揭示的事实？正常逻辑分析，一定是和真相展板内容有关的人。</p>
-<p>一九九九年以来，江泽民出于妒嫉，非法操控整个国家机制迫害<ahref="https://github.com/exms2785/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，中国体制内一些丧失良知的当权者，明知法轮功是教人向善的功法，明知法轮功学员是道德高尚的好人，为了权力和利益，推波助澜、为虎作伥、助纣为虐，积极追随江泽民迫害法轮功学员，大规模的、系统的迫害延续了十七年。十七年中，为了欺骗世人，江泽民流氓集团一方面利用媒体制造谎言诬陷法轮功，另一方面采用各种非法手段绑架、非法关押揭露他们谎言和罪行的法轮功学员。</p>
+	<p>【大纪元2016年11月01日讯】近几个月以来，山东省青岛市区及周边地区有众多<a class="\&quot;popup\&quot;" title="\&quot;法轮大法，也称法轮功，一九九二年五月由李洪志先生传出的佛家上乘修炼大法，以宇宙最高特性“真善忍”为根本指导，按照宇宙的演化原理而修炼。经亿万人的修炼实践证明，法轮大法是大法大道，在把真正修炼的人带到高层次的同时，对稳定社会、提高人们的身体素质和道德水准，也起到了不可估量的正面作用。" href="\&quot;http://www.minghui.org/mh/glossary.md#1#1\&quot;">法轮功</a>学员被绑架，仅青岛市市南区分局就在三个月内绑架了七位<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员，当被绑架的法轮功学员家人问警察为什么绑架好人时，警察说是因为省里下的命令，“省里很重视<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%9C%9F%E7%9B%B8%E5%B1%95%E6%9D%BF.md#1">真相展板</a>”。</p>
+<p>很“重视”什么意思？就是很害怕<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%9C%9F%E7%9B%B8%E5%B1%95%E6%9D%BF.md#1">真相展板</a>。真相展板是什么？内容是揭露<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>流氓犯罪集团的反人类罪行，以及国内二十多万人向中国的最高法院和最高检察院控告<a class="\&quot;popup\&quot;" title="\&quot;明慧网上所说的迫害，一般特指中共对法轮功的迫害。\&quot;" href="\&quot;http://www.minghui.org/mh/glossary.md#1#37\&quot;">迫害</a>元凶<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B1%9F%E6%B3%BD%E6%B0%91.md#1">江泽民</a>的事实。这是全世界人们都知道的事实，也是中国各级官员和大多数民众要知道的事实。那么，为什么某些人害怕真相展板？到底哪些人害怕世人看到真相展板、了解展板所揭示的事实？正常逻辑分析，一定是和真相展板内容有关的人。</p>
+<p>一九九九年以来，江泽民出于妒嫉，非法操控整个国家机制迫害<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，中国体制内一些丧失良知的当权者，明知法轮功是教人向善的功法，明知法轮功学员是道德高尚的好人，为了权力和利益，推波助澜、为虎作伥、助纣为虐，积极追随江泽民迫害法轮功学员，大规模的、系统的迫害延续了十七年。十七年中，为了欺骗世人，江泽民流氓集团一方面利用媒体制造谎言诬陷法轮功，另一方面采用各种非法手段绑架、非法关押揭露他们谎言和罪行的法轮功学员。</p>
 <p>谎言最怕曝光，罪行最怕揭露。江泽民犯罪集团就怕世人知道它撒的弥天大谎，就怕世人知道它犯下的滔天罪行。然而，乌云怎能阻挡太阳？邪恶怎能抗拒正义？一切的谎言与罪行终将暴露于阳光之下，现在，就连邪恶极力掩盖的“活摘法轮功学员器官”的恶行都已经被世界了解、被有良知的世人谴责。</p>
 <p>二零一三年十二月十二日，欧洲议会在法国斯特拉斯堡投票通过一项紧急议案，代表五亿欧洲民众发声，要求“中共立即停止活体摘取良心犯，以及宗教信仰和少数族裔团体器官的行为。”“要求中共政权立即释放包括法轮功学员在内的所有良心犯。”二零一六年六月十三日，美国国会众议院一致通过了三四三号决议案，要求中共立即停止针对法轮功学员等良心犯的“强摘器官”行为。</p>
 <p>德国联邦议会人权委员会议员马丁·帕策尔特指出，“如果中国（政府）不愿意或者没有能力严厉追究江泽民所犯下的反人类罪行，那就只能通过海牙国际刑事法庭追究江泽民的国际刑事责任。”</p>
@@ -24,36 +24,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/16/2/26/n4648487.md#1">中国大陆各地诉江真相展板引人注目</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/16/4/8/n7533005.md#1">纽约哥大法轮功真相展板 师生关注</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/16/6/12/n7990516.md#1">百名高官迫害法轮功遭报实录(2)部委官员</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/16/7/13/n8096926.md#1">法轮功学员7·20反迫害17周年回顾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/2/26/n4648487.md#1">中国大陆各地诉江真相展板引人注目</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/4/8/n7533005.md#1">纽约哥大法轮功真相展板 师生关注</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/6/12/n7990516.md#1">百名高官迫害法轮功遭报实录(2)部委官员</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/7/13/n8096926.md#1">法轮功学员7·20反迫害17周年回顾</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10439090.md#1" target="_blank">严家伟：滥杀无辜草菅人命的“镇反运动”</a></li><li><a href="https://github.com/exms2785/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11583426.md#1" target="_blank">悉尼女律师：修炼让我找到了人生意义</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/2/n11425658.md#1" target="_blank">李小刚：中国大饥荒饿死3755.8万人？！</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/20/n12199884.md#1">专访王维洛：三峡工程无法防洪 准备逃生包</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/20/n12200526.md#1">日环食直播天气观测时间全攻略 错过要等195年</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/20/n12200556.md#1">中印边境冲突后 中共四大异常举动的背后</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/20/n12200863.md#1">【一线采访】北京餐馆食客中招 草木皆兵</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/20/n12199903.md#1">郝海东再炮轰“中共体制虚伪没人性”</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/19/n12198770.md#1">母亲过世四个月 65岁周润发露面爬山</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/19/n12198952.md#1">刘德华惊爆一整年生病 自嘲窜出白发和皱纹</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/19/n12197427.md#1">美达人秀评审找碴 12岁女孩连唱3次终过关</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/19/n12198061.md#1">《歌剧魅影》台北站放五星旗惹议 官网急修正</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/19/n12199128.md#1">主演《魔戒》老哈比人 88岁伊恩·霍姆病逝</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/20/n12199965.md#1">观日食占卜文化   省视当今中国会出大事吗？</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/19/n12198822.md#1">43岁身心亮红灯 跑步让他甩掉压力、走出困境</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/5/22/n12130110.md#1">【康熙大帝】从三阿哥到康熙帝（上）</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/4/16/n12037273.md#1">亚历山大·汉密尔顿和华盛顿将军的相遇</a></li>
-<li><a href="https://github.com/exms2785/djy/blob/master/gb/20/6/5/n12162914.md#1">【命理】为什么夏天出生的命还会喜木火？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/exms2785/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/exms2785/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/31/n8447671.htm">鲁鸣：山东一些官员为何害怕真相展板？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/10/31/n8447671.htm">鲁鸣：山东一些官员为何害怕真相展板？</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/exms2785/djy/blob/master/gb/16/10/31/n8447671.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/exms2785/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/exms2785/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/exms2785/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/exms2785/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/exms2785/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/10/31/n8447671.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
